--- a/Boilerplate/Modules/CoinDetail.storyboard
+++ b/Boilerplate/Modules/CoinDetail.storyboard
@@ -25,10 +25,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Xtd-9l-yre">
-                                <rect key="frame" x="0.0" y="176" width="375" height="435"/>
+                                <rect key="frame" x="0.0" y="212" width="375" height="399"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="50" id="wbt-3V-tMq" customClass="coinDetailCell" customModule="Boilerplate" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="50" id="wbt-3V-tMq" customClass="CoinDetailCell" customModule="Boilerplate" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wbt-3V-tMq" id="XJa-Pq-Jel">
@@ -62,31 +62,51 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t30-7z-nan">
-                                <rect key="frame" x="121" y="36" width="132" height="132"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Asd-zV-1bX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="t30-7z-nan" secondAttribute="height" multiplier="1:1" id="WGf-po-7Av"/>
-                                    <constraint firstAttribute="height" constant="132" id="ZnN-gk-Joe"/>
-                                    <constraint firstAttribute="width" constant="132" id="jSY-rT-jZA"/>
+                                    <constraint firstAttribute="width" secondItem="Asd-zV-1bX" secondAttribute="height" multiplier="375:44" id="xBY-RW-s3V"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="Ooc-th-ARN">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Igb-fJ-MI7">
+                                            <connections>
+                                                <action selector="dismissView:" destination="CZx-xz-miV" id="jok-4J-ID5"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="EIn-Z9-gMX"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="t30-7z-nan">
+                                <rect key="frame" x="121" y="72" width="132" height="132"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="132" id="Imi-Wf-z3F"/>
+                                    <constraint firstAttribute="width" secondItem="t30-7z-nan" secondAttribute="height" multiplier="1:1" id="JBM-wc-oZV"/>
+                                    <constraint firstAttribute="width" constant="132" id="bbu-Cj-Oo6"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="t30-7z-nan" firstAttribute="centerX" secondItem="EwW-2C-K8N" secondAttribute="centerX" id="8Bk-wu-n7n"/>
-                            <constraint firstItem="t30-7z-nan" firstAttribute="top" secondItem="j9Q-5U-yaB" secondAttribute="top" constant="16" id="EbD-A4-8uq"/>
-                            <constraint firstItem="THI-2f-Sac" firstAttribute="top" secondItem="Xtd-9l-yre" secondAttribute="bottom" id="GKZ-tV-xCx"/>
+                            <constraint firstItem="Asd-zV-1bX" firstAttribute="leading" secondItem="j9Q-5U-yaB" secondAttribute="leading" id="5vu-VH-TcB"/>
+                            <constraint firstItem="Xtd-9l-yre" firstAttribute="leading" secondItem="j9Q-5U-yaB" secondAttribute="leading" id="6DM-op-TLN"/>
+                            <constraint firstItem="Xtd-9l-yre" firstAttribute="top" secondItem="t30-7z-nan" secondAttribute="bottom" constant="8" id="9Zw-Tj-Lk9"/>
+                            <constraint firstItem="Asd-zV-1bX" firstAttribute="top" secondItem="j9Q-5U-yaB" secondAttribute="top" id="Dgh-qC-cah"/>
+                            <constraint firstItem="Asd-zV-1bX" firstAttribute="trailing" secondItem="j9Q-5U-yaB" secondAttribute="trailing" id="Ggw-cj-Gt2"/>
                             <constraint firstItem="THI-2f-Sac" firstAttribute="leading" secondItem="j9Q-5U-yaB" secondAttribute="leading" id="If2-VK-O7N"/>
                             <constraint firstItem="THI-2f-Sac" firstAttribute="trailing" secondItem="j9Q-5U-yaB" secondAttribute="trailing" id="L2K-kD-wpx"/>
+                            <constraint firstItem="Xtd-9l-yre" firstAttribute="trailing" secondItem="j9Q-5U-yaB" secondAttribute="trailing" id="N8Z-n9-2LI"/>
                             <constraint firstItem="THI-2f-Sac" firstAttribute="bottom" secondItem="j9Q-5U-yaB" secondAttribute="bottom" id="NsC-w8-VhT"/>
-                            <constraint firstItem="Xtd-9l-yre" firstAttribute="top" secondItem="t30-7z-nan" secondAttribute="bottom" constant="8" id="UVH-wa-BBl"/>
-                            <constraint firstItem="Xtd-9l-yre" firstAttribute="leading" secondItem="j9Q-5U-yaB" secondAttribute="leading" id="YO9-SZ-9hu"/>
-                            <constraint firstItem="Xtd-9l-yre" firstAttribute="trailing" secondItem="j9Q-5U-yaB" secondAttribute="trailing" id="fUn-j0-4nS"/>
+                            <constraint firstItem="THI-2f-Sac" firstAttribute="top" secondItem="Xtd-9l-yre" secondAttribute="bottom" id="je2-2O-UtK"/>
+                            <constraint firstItem="t30-7z-nan" firstAttribute="top" secondItem="Asd-zV-1bX" secondAttribute="bottom" constant="8" id="lqm-hd-1X9"/>
+                            <constraint firstItem="t30-7z-nan" firstAttribute="centerX" secondItem="EwW-2C-K8N" secondAttribute="centerX" id="suP-0C-KN6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="j9Q-5U-yaB"/>
                     </view>
                     <connections>
                         <outlet property="mCoinImageView" destination="t30-7z-nan" id="97c-nm-yG7"/>
+                        <outlet property="mNavigationBar" destination="Asd-zV-1bX" id="Qyp-yN-ztq"/>
                         <outlet property="mTableView" destination="Xtd-9l-yre" id="FiY-38-8a1"/>
                     </connections>
                 </viewController>
